# OpenSaMD

./: .buildinfo  .env  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .tool-versions  00-instructions-for-use.html  00-introduction.html  01-intended-use.html  02-intended-performance.html  ADDITIONAL-TERMS  CNAME  CODEOWNERS  LICENSE.ADDITIONAL-TERMS  Makefile  README.md  architecture-design-chart.html  architecture_design_chart.html  create-toc.sh  cyber-security.html  cyber_security.html  genindex.html  hazard-analysis.html  hazard_analysis.html  index.html  intro.html  known-anomalies.html  known_anomalies.html  level-of-concern.html  level_of_concern.html  markdown.html  note-about-missing-requirements.html  note_about_missing_requirements.html  notebooks.html  objects.inv  pants.toml  pyproject.toml  release-history.html  (+21 more)
0-intended-use/: autocontouring.html  index.html  sgrt.html
1-general/: 0-mdr-classification-document.html  checklist-mdr.html  declaration-of-conformity.html  essential-requirements-mdd.html  index.html  instructions-for-use.html
1-qms/: 0-quality-manual-policy-objectives.html  13485-mapping.html  index.html  sop-feedback-management.html  sop-internal-audit.html  sop-product-certification-and-registration.html  sop-update-of-regulations.html
2-qms/: 0-quality-manual-policy-objectives.html  13485-mapping.html  index.html  sop-feedback-management.html  sop-internal-audit.html  sop-product-certification-and-registration.html  sop-update-of-regulations.html
2-techdoc/: document-roadmap.html  index.html  list-of-known-anomalies.html
3-general/: checklist-mdr.html  declaration-of-conformity-mdd-class-i.html  essential-requirements-mdd.html  index.html  instructions-for-use.html  mdd-classification-document.html  mdr-classification-document.html
3-techdoc/: document-roadmap.html  index.html  list-of-known-anomalies.html
510k/: 00-overview.html  11-executive-summary-predicate-comparison.html  11_executive_summary_predicate_comparison.html  12-substantial-equivalence-discussion.html  12_substantial_equivalence_discussion.html  overview.html  regulatory-change-assessment.html  regulatory_change_assessment.html
_sources/: 00-instructions-for-use.md  00-introduction.md  02-intended-performance.md  cyber_security.md  hazard-analysis.md  hazard_analysis.md  index.md  known-anomalies.md  level_of_concern.md  note-about-missing-requirements.md  note_about_missing_requirements.md  release-history.md  release_history.md  release_record.md  risk-management-plan.md  risk_management_plan.md  software-design-specification.md  software-plan.md  software-requirements-specification.md  software_design_specification.md  software_plan.md  software_requirements_specification.md  test-record.md  test_record.md  verification-and-validation-plan.md  verification_and_validation_plan.md
archived/: index.html
clinical-evaluation/: 0-sop-clinical-evaluation.html  clinical-evaluation-plan.html  clinical-evaluation-report.html
data-protection/: data-protection-statement-website.html  employee-data-protection-and-confidentiality-agreement.html  index.html  list-of-data-processing-activities.html  technical-and-organizational-measures.html
docs/: .gitignore  02-intended-performance.md  BUILD  LICENSE  _config.yml  _toc.yml  build.py  index.md  references.bib
drafts/: 62304-mapping.html  architecture-design-chart.html  cyber-security.html  hazard-analysis.html  intended-performance.html  intended-use.html  introduction.html  known-anomalies.html  level-of-concern.html  note-about-missing-requirements.html  quality-manual-policy-objectives.html  release-history.html  release-record.html  risk-acceptance-matrix.html  risk-management-plan.html  risk-management-report.html  software-description.html  software-design-specification.html  software-development-maintenance-plan.html  software-plan.html  software-requirements-specification.html  sop-document-record-control.html  sop-integrated-software-development.html  test-record.html  verification-and-validation-plan.html
notebooks/: .gitignore  2022-11-epsm-ai-workshop.ipynb  2022-11-eye-region-demo.ipynb
pants-plugin/: BUILD  README.md  pyproject.toml
pants-plugin/opensamdpantsplugins/: __init__.py
pants-plugin/opensamdpantsplugins/jupyter_book/: register.py
prototyping/: 00-loading-model.ipynb  01-batch-and-merge.ipynb  02-compare-directly.ipynb  03-move-to-lib.ipynb  04-deepmind-version.ipynb  05-recursive-version.ipynb  06-loop-last-layer-impact.ipynb  07-plotly-display.ipynb  08-coordinate-verifications.ipynb  08-further-plotly.ipynb  09-add-in-contours.ipynb  10-full-inference-in-lib.ipynb  10-full-inference.ipynb  11-optimise-step-size.ipynb  12-colab-demo.ipynb  12_colab_demo.ipynb  13-more-structures.ipynb  14-validation-paths.ipynb  15-colab-demo.ipynb  16-colab-demo.ipynb  README.md  grid.py  loading-model.ipynb  masking-round-trip.ipynb
radiotherapyai/: __main__.py  _build.py  _docs.py  _version.py
rai/: __init__.py  __main__.py  _paths.py  _version.py
released/: 13485-mapping.html  index.html  quality-manual-policy-objectives.html  sop-capa.html  sop-change-management.html  sop-document-record-control.html  sop-feedback-management.html  sop-human-resources-administration.html  sop-incident-reporting.html  sop-integrated-software-development.html  sop-internal-audit.html  sop-management-review.html  (+6 more)
src/python/rai/: BUILD  LICENSE.ADDITIONAL-TERMS  README.md  __main__.py  pyproject.toml  version.py
src/python/rai/_version/: BUILD
src/python/rai/rai/: BUILD  __init__.py  __main__.py  _paths.py  _version.py
src/python/rai/rai/_cli/: propagate.py
src/python/rai/rai/dicom/: append.py  uid.py
src/python/rai/rai/mask/: test_convert.py
src/python/rai/rai/metrics/: dice.py  test_dice.py
src/python/rai/typings/shapely/geometry/: polygon.pyi
src/python/raicontours/: BUILD  README.md  _version.py  pyproject.toml
src/python/raicontours/raicontours/: BUILD  __init__.py  _paths.py  _version.py  config.py  record.py  tg263.py  training_record.json  typing.py
(+465 files in other folders)
