[tool.poetry]
name = "radiotherapyai"
version = "0.1.0"
description = "AI assisted treatments accessible to all"
authors = ["Simon Biggs <simon.biggs@radiotherapy.ai>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
# Upper pinning here is being forced on us by scipy. We don't want to do this.
# Ideally find a way to not upper pin if possible. See the following for more
# details:
# https://iscinumpy.dev/post/bound-version-constraints/#pinning-the-python-version-is-special
python = ">=3.9,<3.12"

# We keep all version constraints as broad as possible for the library release.
# For the application release, all versions are pinned and tightly controlled.
# But that is managed within the `poetry.lock` file, not here. See
# https://iscinumpy.dev/post/app-vs-library/ and
# https://iscinumpy.dev/post/bound-version-constraints/ for more info.
shapely = "*"
numpy = "*"
scikit-image = "*"
scipy = "*"
pydicom = "*"
click = "*"

[tool.poetry.dev-dependencies]
jupyter-book = "*"
black = "*"
blackdoc = "*"
pytest = "*"
pyright = "*"
pylint = "*"
pytest-pylint = "*"
pre-commit = "*"
ipykernel = "*"
matplotlib = "*"
mypy = "*"
pyoxidizer = "*"

[tool.poetry.scripts]
radiotherapyai = "radiotherapyai.__main__:cli"
rtai = "radiotherapyai.__main__:cli"

[tool.pyright]
include = ["radiotherapyai"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
]
typeCheckingMode = "strict"

[tool.isort]
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
