[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "rai"
authors = [{name = "Simon Biggs", email = "simon.biggs@radiotherapy.ai"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)"]
dynamic = ["version", "description"]
dependencies = [
    "click",
    "cryptography",
    "numba",
    "numpy",
    "pydicom",
    "scikit-image",
    "scipy",
    "shapely",
    "tqdm",
    "tensorflow; sys.platform != 'Windows'",
    "tensorflow-intel; sys.platform == 'Windows'",
    "tensorflow-directml-plugin; sys.platform == 'Windows'",
    "raicontours == 0.3.0-dev6",
]

[project.urls]
Home = "https://github.com/OpenSaMD/OpenSaMD"
