[tool.poetry]
name = "raicontours"
version = "0.3.0-dev7"
description = ""
authors = ["Simon Biggs <simon.biggs@radiotherapy.ai>"]
license = "AGPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7"
pydicom = "*"
typing-extensions = "*"

[tool.poetry.dev-dependencies]
black = "*"
blackdoc = "*"
pyright = "*"
pylint = "*"
mypy = "*"
pre-commit = "*"


[tool.pyright]
include = ["raicontours"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
]
typeCheckingMode = "strict"

[tool.isort]
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
