[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "raicontours"
authors = [{name = "Simon Biggs", email = "simon.biggs@radiotherapy.ai"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)"]
dynamic = ["version", "description"]
dependencies = [
    "pydicom",
    "typing-extensions",
]

[project.urls]
Home = "https://github.com/OpenSaMD/OpenSaMD"
